--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@drawable/proj_icon"
+        android:icon="@drawable/app_main_logo"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
@@ -33,6 +33,7 @@
         <activity android:name=".activity.UserSignupActivity">
 
         </activity>
+
     </application>
 
 </manifest>
